@@ -103,7 +103,7 @@ fops_rename_current(view_t *view, int name_only)
 
 	flist_sel_stash(view);
 	fops_line_prompt(name_only ? "New name root: " : "New full name: ", filename,
-			&rename_file_cb, rename_file_ext, &complete_filename_only, 1);
+			&rename_file_cb, rename_file_ext, &complete_filename_only);
 }
 
 /* Callback for processing file rename query. */
